src/scripts/components/h5p-crossword-char-list.scss
.h5p-crossword-input-fields-group-solution-container {
  --solution-container-offset: calc(0.25 * var(--h5p-theme-spacing-s));
  position: relative;
  width: calc(100% - 2 * var(--solution-container-offset));
  left: var(--solution-container-offset);

  .h5p-crossword-input-fields-group-solution-inner {
    background: #fbfbfb; /* Mimics disabled input field state, no matching NEUD token */
    border-bottom: 1px solid var(--h5p-theme-stroke-2);
    border-left: 1px solid var(--h5p-theme-stroke-2);
    border-right: 1px solid var(--h5p-theme-stroke-2);
    font-size: 0.9em;
    line-height: 1em;
    text-align: left;
    position: relative;

    .h5p-crossword-input-fields-group-solution-word {
      position: relative;
      z-index: 3;
      display: inline-flex;
      flex-wrap: wrap;
      /* Compensating the value in https://github.com/h5p/h5p-question/blob/3676a7053120fcfe439747d7bcc8206755d7b4c3/styles/question.css#L327 */
      padding-right: 1.615384615em;
      padding-bottom: var(--h5p-theme-spacing-xs);
      padding-left: var(--h5p-theme-spacing-xs);

      .h5p-crossword-input-fields-group-solution-char-wrapper {
        border-radius: var(--h5p-theme-border-radius-small);
        color: inherit;
        line-height: 1em;
        margin-right: calc(var(--h5p-theme-spacing-xs) / 2);
        margin-top: var(--h5p-theme-spacing-xs);
        padding: calc(var(--h5p-theme-spacing-xs) / 4);
        position: relative;

        &:last-child {
          margin-right: 0;
        }

        &.h5p-crossword-solution-no-input {
          background-color: var(--h5p-theme-feedback-neutral-main);
          border: 1px solid var(--h5p-theme-feedback-neutral-main);
          color: var(--h5p-theme-feedback-neutral-secondary);
          display: inline-block;
          height: 1em;

          &.h5p-crossword-solution-no-char {
            width: 1em;
          }
        }

        &.h5p-crossword-solution-correct {
          background: var(--h5p-theme-feedback-correct-secondary);
          border: 1px solid var(--h5p-theme-feedback-correct-secondary);
          color: var(--h5p-theme-feedback-correct-main);

          &::after {
            color: var(--h5p-theme-feedback-correct-main);
            content: "\e903";
            font-family: h5p-theme;
            padding-left: calc(var(--h5p-theme-spacing-xs) / 2);
            right: var(--h5p-theme-spacing-xs);
            text-decoration: none;
            top: 0;
          }
        }

        &.h5p-crossword-solution-wrong {
          background-color: var(--h5p-theme-feedback-incorrect-secondary);
          border: 1px solid var(--h5p-theme-feedback-incorrect-secondary);
          color: var(--h5p-theme-feedback-incorrect-main);

          &::after {
            color: var(--h5p-theme-feedback-incorrect-main);
            content: "\e902";
            font-family: h5p-theme;
            padding-left: calc(var(--h5p-theme-spacing-xs) / 2);
            right: var(--h5p-theme-spacing-xs);
            text-decoration: none;
            top: 0;
          }
        }
      }
    }
  }

  &.display-none {
    display: none;
  }
}

